# TidalDisruptionLRD

./: .pre-commit-config.yaml  LICENSE  README.md  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
data/Greene25/: z4-6_LF.csv
data/Inayoshi24/: z4_Dashed_Unobscured.csv  z4_Solid_Obscured.csv  z5_Dashed_Unobscured.csv  z5_Solid_Obscured.csv  z6_Dashed_Unobscured.csv  z6_Solid_Obscured.csv
data/LRD_Mbh_Ms/: Harikane+.csv  KH13.csv  Maiolino+.csv  Stone+.csv  Yue+.csv
docs/: conf.py  index.md
nbs/: Ms_Mbh_tde_rate.ipynb  test.ipynb
nbs/tdes/: tde_100.pkl  tde_100_cusp.pkl  tde_200.pkl  tde_200_cusp.pkl  tde_Dehnen_000.pkl  tde_Dehnen_000_1.pkl  tde_Dehnen_000_10.pkl  tde_Dehnen_000_2.pkl  tde_Dehnen_000_5.pkl  tde_Dehnen_025.pkl  tde_Dehnen_050.pkl  tde_Dehnen_075.pkl  tde_Dehnen_100.pkl  tde_Dehnen_100_1.pkl  tde_Dehnen_100_10.pkl  tde_Dehnen_100_2.pkl  tde_Dehnen_100_5.pkl  tde_Dehnen_125.pkl  tde_Dehnen_150.pkl  tde_Dehnen_175.pkl  tde_Dehnen_200.pkl  tde_Dehnen_200_1.pkl  tde_Dehnen_200_10.pkl  tde_Dehnen_200_2.pkl  tde_Dehnen_200_5.pkl  tde_Dehnen_225.pkl  tde_Dehnen_250.pkl  tde_Hernquist_Salpeter_1e10_a55_75.pkl  tde_Hernquist_Salpeter_1e8_a55_75.pkl  tde_Hernquist_Salpeter_1e9_a55_22.pkl  tde_Hernquist_Salpeter_1e9_a55_75.pkl  tde_env_100.pkl  tde_env_100_cusp.pkl  tde_env_200.pkl  tde_env_200_cusp.pkl  tde_env_Dehnen_000_2.pkl  tde_env_Dehnen_100_2.pkl  tde_env_Dehnen_200_2.pkl
nbs/tdes/Kroupa/: tde_Dehnen_000.pkl  tde_Dehnen_025.pkl  tde_Dehnen_050.pkl  tde_Dehnen_075.pkl  tde_Dehnen_100.pkl  tde_Dehnen_125.pkl  tde_Dehnen_150.pkl  tde_Dehnen_175.pkl  tde_Dehnen_200.pkl  tde_Dehnen_225.pkl  tde_Dehnen_250.pkl
nbs/tdes/Salpeter/: tde_Dehnen_000.pkl  tde_Dehnen_025.pkl  tde_Dehnen_050.pkl  tde_Dehnen_075.pkl  tde_Dehnen_100.pkl  tde_Dehnen_125.pkl  tde_Dehnen_150.pkl  tde_Dehnen_175.pkl  tde_Dehnen_200.pkl  tde_Dehnen_225.pkl  tde_Dehnen_250.pkl
src/tidaldisruptionlrd/: __init__.py  all_sky.py  constants.py  diffusion_coeff.py  eddington_inversion.py  show_observed_LRD.py  stellar_distribution.py  tde_rate.py  tdr_rate.py  utils.py
tests/: test_package.py
